// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorybookConfiguration generator should configure storybook to use webpack 5 1`] = `
"const rootMain = require('../../../.storybook/main');


module.exports = {
  ...rootMain,
  
  core: { ...rootMain.core, builder: 'webpack5' },
  
  stories: [
    ...rootMain.stories,
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)'
  ],
  addons: [...rootMain.addons ],
  webpackFinal: async (config, { configType }) => {
    // apply any global webpack configs that might have been specified in .storybook/main.js
    if (rootMain.webpackFinal) {
      config = await rootMain.webpackFinal(config, { configType });
    }
    
    

    // add your own webpack tweaks if needed

    return config;
  },
};
"
`;

exports[`StorybookConfiguration generator should generate in the correct folder 1`] = `
Array [
  ".eslintrc.json",
  ".prettierrc",
  ".storybook/main.js",
  ".storybook/tsconfig.json",
  "apps/one/two/test-ui-lib-e2e/.eslintrc.json",
  "apps/one/two/test-ui-lib-e2e/cypress.json",
  "apps/one/two/test-ui-lib-e2e/src/fixtures/example.json",
  "apps/one/two/test-ui-lib-e2e/src/integration/barrel-button/barrel-button.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/cmp1/cmp1.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/cmp2/cmp2.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/nested-button/nested-button.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/test-button/test-button.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/test-other/test-other.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/variable-declare-button/variable-declare-button.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/variable-declare-view/variable-declare-view.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/integration/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "apps/one/two/test-ui-lib-e2e/src/support/commands.ts",
  "apps/one/two/test-ui-lib-e2e/src/support/index.ts",
  "apps/one/two/test-ui-lib-e2e/tsconfig.json",
  "jest.config.ts",
  "jest.preset.ts",
  "libs/test-ui-lib/.eslintrc.json",
  "libs/test-ui-lib/.storybook/main.js",
  "libs/test-ui-lib/.storybook/preview.js",
  "libs/test-ui-lib/.storybook/tsconfig.json",
  "libs/test-ui-lib/jest.config.ts",
  "libs/test-ui-lib/README.md",
  "libs/test-ui-lib/src/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.css",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.html",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel.module.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.css",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.html",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.ts",
  "libs/test-ui-lib/src/lib/nested/nested.module.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/static-member-declarations.module.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.css",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.html",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.css",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.html",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.ts",
  "libs/test-ui-lib/src/lib/test-ui-lib.module.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare.module.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare.module.ts",
  "libs/test-ui-lib/src/test-setup.ts",
  "libs/test-ui-lib/tsconfig.json",
  "libs/test-ui-lib/tsconfig.lib.json",
  "libs/test-ui-lib/tsconfig.spec.json",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
  "workspace.json",
]
`;

exports[`StorybookConfiguration generator should generate the right files 1`] = `
Array [
  ".eslintrc.json",
  ".prettierrc",
  ".storybook/main.js",
  ".storybook/tsconfig.json",
  "apps/test-ui-lib-e2e/.eslintrc.json",
  "apps/test-ui-lib-e2e/cypress.json",
  "apps/test-ui-lib-e2e/src/fixtures/example.json",
  "apps/test-ui-lib-e2e/src/integration/barrel-button/barrel-button.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/cmp1/cmp1.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/cmp2/cmp2.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/nested-button/nested-button.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/test-button/test-button.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/test-other/test-other.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/variable-declare-button/variable-declare-button.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/variable-declare-view/variable-declare-view.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "apps/test-ui-lib-e2e/src/integration/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "apps/test-ui-lib-e2e/src/support/commands.ts",
  "apps/test-ui-lib-e2e/src/support/index.ts",
  "apps/test-ui-lib-e2e/tsconfig.json",
  "jest.config.ts",
  "jest.preset.ts",
  "libs/test-ui-lib/.eslintrc.json",
  "libs/test-ui-lib/.storybook/main.js",
  "libs/test-ui-lib/.storybook/preview.js",
  "libs/test-ui-lib/.storybook/tsconfig.json",
  "libs/test-ui-lib/jest.config.ts",
  "libs/test-ui-lib/README.md",
  "libs/test-ui-lib/src/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.css",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.html",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel.module.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.css",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.html",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.ts",
  "libs/test-ui-lib/src/lib/nested/nested.module.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/static-member-declarations.module.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.css",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.html",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.css",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.html",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.ts",
  "libs/test-ui-lib/src/lib/test-ui-lib.module.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare.module.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare.module.ts",
  "libs/test-ui-lib/src/test-setup.ts",
  "libs/test-ui-lib/tsconfig.json",
  "libs/test-ui-lib/tsconfig.lib.json",
  "libs/test-ui-lib/tsconfig.spec.json",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
  "workspace.json",
]
`;
